logs/Slang/chapter-7/arrays/dynamic/op-new.sv.log
name: dynamic-arrays-op-new
description: Test dynamic arrays operator new support
should_fail: 0
tags: 7.5.1
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/dynamic/op-new.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/dynamic/op-new.sv:9:14: error: dimension requires a constant range
bit [7:0] arr[];
             ^~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/dynamic/op-new.sv:12:11: error: language feature not yet supported
    arr = new [ 4 ];
          ^~~~~~~~~
